syntax = "proto3";

package sfc_request;

option csharp_namespace = "SFC.Request.Contracts.Messages.Request.Team.Player.Find.Filters";

message GetTeamPlayerRequestsFilter
{
}