syntax = "proto3";

package sfc_request;

import "Models/Request/Team/Player/team_player_request.proto";

option csharp_namespace = "SFC.Request.Contracts.Messages.Request.Team.Player.Get";

message GetTeamPlayerRequestResponse
{
    TeamPlayerRequest request = 1;
}